# fastapi-ecommerce-main

./: .env.example  .gitignore  DDL.sql  Dockerfile  README.md  blog_post.md  datamodel.txt  docker-compose.yml  pyproject.toml  reddit_post.md  requirements.txt
alembic/: env.py
alembic/versions/: 554c9035ae7c_add_wishlist_table.py  e34fcd50def9_initial.py
app/: dependencies.py  main.py
app/api/v1/: init_routes.py
app/api/v1/routes/: admin.py  cart.py  category.py  healthcheck.py  order.py  payment.py  product.py  review.py  upload.py  user.py  wishlist.py
app/core/: config.py  exceptions.py  logger.py  redis.py
app/crud/: address.py  cart_item.py  category.py  order.py  payment.py  product.py  review.py  user.py  wishlist.py
app/db/: database.py
app/middleware/: request_logger.py
app/models/: __init__.py  address.py  cart.py  cart_item.py  category.py  order.py  order_item.py  payment.py  product.py  review.py  user.py  wishlist.py
app/schema/: address_schema.py  admin_schema.py  cart_schema.py  category_schema.py  common_schema.py  order_schema.py  payment_schema.py  product_schema.py  review_schema.py  search_schema.py  user_schema.py  wishlist_schema.py
app/services/: address_service.py  admin_service.py  cart_service.py  category_service.py  email_service.py  file_service.py  order_service.py  payment_service.py  product_service.py  review_service.py  user_service.py  wishlist_service.py
app/utils/: generate_slug.py  order_utils.py  security.py  seed.py  session.py
